<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_IMC"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_IMC" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@android:drawable/checkbox_on_background"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_recordatorios"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_recordatorios" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/icon_name"
        android:title="@string/title_profile" />

</menu>