<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.pg.salud.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_IMC"
        android:name="com.pg.salud.ui.IMC.IMC"
        android:label="@string/title_IMC"
        tools:layout="@layout/fragment_registro_imc" >
        <action
            android:id="@+id/action_navigation_IMC_to_navigation_calc"
            app:destination="@id/navigation_calc" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.pg.salud.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.pg.salud.ui.profile.Profile"
        android:label="@string/title_profile"
        tools:layout="@layout/profile" />
    <fragment
        android:id="@+id/navigation_recordatorios"
        android:name="com.pg.salud.ui.recordatorio.Recordatorio"
        android:label="@string/title_recordatorios"
        tools:layout="@layout/fragment_recordatorios_in" />
    <fragment
        android:id="@+id/navigation_calc"
        android:name="com.pg.salud.ui.calc.CalculadoraIMC"
        android:label="@string/title_recordatorios"
        tools:layout="@layout/calculadora_imc" >
        <action
            android:id="@+id/action_navigation_calc_to_navigation_IMC"
            app:destination="@id/navigation_IMC" />
    </fragment>
</navigation>